# arv

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSES  MANIFEST.in  NOTES.md  README.md  README.rst  TODO.md  ninja.sh  publish.sh  setup.py  tox.ini
arv/: __init__.py  __main__.py  match.py  traits.py  util.py
cmake/: Findgoogle_densehash.cmake  UseCython.cmake
cpp/: .gitignore  CMakeLists.txt  arv.cpp  arv.hpp  arv_cython.hpp  dnatraits.cpp  dnatraits.hpp  export.hpp  file.cpp  file.hpp  fileptr.cpp  fileptr.hpp  filesize.cpp  filesize.hpp  mmap.cpp  mmap.hpp  parse.cpp  parse_file.cpp  public_py_init_sym.hpp
cython/: CMakeLists.txt  _arv.pyx  arv.pyx
python/: CMakeLists.txt  setup.py.in  traits.py
python/arv/: __init__.py  match.py  traits.py  util.py
tests/: CMakeLists.txt  __init__.py  bench.py  benchmark.py  example.py  fake_genome.txt  fake_genome_female.txt  test_arv.py  test_benchmark.py  test_commandline.py  test_infer.py  test_traits.py  testarv.py  testarvcy.py  testinfer.py
